Closed Bug 334849 Opened 18 years ago Closed 18 years ago

loader won't initialise with --disable-xpcom-fastload

Categories

(Core :: XPConnect, defect)

defect
Not set
minor

Tracking

()

RESOLVED FIXED

People

(Reporter: neil, Assigned: neil)

Details

Attachments

(1 file)

I was getting a component fastload assertion so rather than filing a bug on the issue I lazily disabled xpcom fastload. Imagine my horror when JS components still refused to load! So I've ended up filing a bug anyway :-[
Attached patch Proposed patchSplinter Review
Make failure to get the fast load service nonfatal.
Assignee: dbradley → neil
Status: NEW → ASSIGNED
Attachment #219175 - Flags: superreview?(brendan)
Attachment #219175 - Flags: review?(shaver)
Comment on attachment 219175 [details] [diff] [review]
Proposed patch

r=shaver, and approved for 1.8.1 subject to brendan's review.
Attachment #219175 - Flags: review?(shaver)
Attachment #219175 - Flags: review+
Attachment #219175 - Flags: approval-branch-1.8.1+
Comment on attachment 219175 [details] [diff] [review]
Proposed patch

Sure.  I'm with Raymond Chen -- macros hiding control flow disjunctions are evil.

/be
Attachment #219175 - Flags: superreview?(brendan) → superreview+
Fix checked in.
Status: ASSIGNED → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
Comment on attachment 219175 [details] [diff] [review]
Proposed patch

--disable-xpcom-fastload does not appear to apply to the branch.
Attachment #219175 - Flags: approval-branch-1.8.1+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: