--disable-xpcom-fastload breaks JS component loader b=334849 r=shaver sr=brendan